--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MJ MAP</title>
+    <title>Earthquakes in 2019</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,9 +12,33 @@
   </head>
   <body>
     <div id="view-container"></div>
-    <h1 class="title">MJ Map view</h1>
+    <h1 class="title">Major earthquakes in 2019</h1>
     <div id="details">
       <div id="legend">
+        In 2019, there were 13456 earthquakes with magnitude higher or equal to 4. In this visualization, small yellow
+        spheres (
+        <div class="small-circle"></div>
+        ) are earthquakes with magnitudes between 4 and 6. Large red spheres (
+        <div class="big-circle"></div>
+        ) are earthquakes with a magnitude higher than 7. In between, the color and size of spheres are interpolated.
+        Earthquake depth is exaggerated by a factor of 6. The orange lines (
+        <div class="orange-line"></div>
+        ) represent the boundaries of the tectonic plates. Earthquake data from
+        <a href="https://earthquake.usgs.gov/earthquakes/search/">USGS</a>.
+        <a href="https://www.arcgis.com/home/item.html?id=2b93b06dc0dc4e809d3c8db5cb96ba69"
+          >Country borders feature service</a
+        >
+        is made available by the <a href="https://livingatlas.arcgis.com/en/">Living Atlas</a>. Visualization created
+        with <a href="https://developers.arcgis.com/javascript">Esri's ArcGIS API for JavaScript</a>.
+      </div>
+      <button id="legend-control">Hide explanation</button>
+      <p>
+        <button id="toggle-exaggeration">
+          Toggle exaggeration
+        </button>
+        to visualize the actual depth and the exaggerated depth. The list below displays the earthquakes with magnitude
+        higher than 7 in chronological order.
+      </p>
       <div id="earthquake-list"></div>
     </div>
   </body>
